2011-06-13  Miloslav Trmač  <mitr@redhat.com>

	* src/bridge.py (RequestType, RequestType.post_request_phase): New
	parameter user_name.  All users updated.
	(KojiClient.__init__): New parameter user_name.  All users updated.
	(KojiClient.__get_session): Do proxy authentication based on certificate
	CN, not on sigul user name.
	(SignRPMRequestType.forward_request_payload): Pass certificate CN to
	KojiClient.
	(SignRPMsKojiThread.__init__): New parameter user_name.
	(SignRPMsKojiThread._real_run): Pass certificate CN to KojiClient.
	(SignRPMsRequestType.post_request_phase): Pass certificate CN to
	SignRPMsKojiThread.
	(handle_connection): New parameter user_name.
	(bridge_one_request): Pass certificate CN as Koji user name.

	* src/server.py (SigningContext.sign_rpm): If we fail due to unexpected
	RPM output, record it.

	* src/client.py (cmd_sign_rpm, cmd_sign_rpms): Reject (sigul sign-rpm*
	-o ... --koji-only ...).

2011-06-06  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 0.99.
	* NEWS: Update.

2011-06-04  Miloslav Trmač  <mitr@redhat.com>

	* doc/protocol-design.txt (sign-rpm, sign-rpms): New field
	koji-instance.
	* src/utils.py (KojiConfiguration._add_defaults): Add default for
	koji-instances.
	(KojiConfiguration._read_configuration): Handle koji-instances, and the
	per-instance configuration files.
	(koji_read_config): New parameter instance.
	* src/client.py (SignRPMArgumentExaminer.__init__): New parameter
	koji_instance.
	(SignRPMArgumentExaminer.open_rpm): Use the specified Koji instance.
	(SignRPMsRequestThread.__init__): New parameter koji_instance.
	(SignRPMsRequestThread._real_run): Use the specified Koji instance.
	(cmd_sign_rpm, cmd_sign_rpms): New option --koji-instance.
	* src/bridge.py (KojiClient.__get_session): Use the koji-instance
	field.
	(request-types): Allow field 'koji-instance' in sign-rpm and sign-rpms.
	* config/bridge.conf (koji)
	* config/client.conf (koji): Add alternative Koji instance examples.